--- a/source/photo.html
+++ b/source/photo.html
@@ -43,70 +43,72 @@
 
     <main class="page-main">
       <section class="intro intro--small">
-        <h1 class="intro__title">Фотографии пользователей</h1>
+        <h1 class="intro__title">Фотографии<br>пользователей</h1>
       </section>
       <section class="photos">
         <div class="photos__intro-block">
-          <p class="photos__intro">Взгляните на фотографии, которые выкладывают пользователи!&nbspВидите, как не хватает ваших?</p>
+          <p class="photos__intro">Взгляните на фотографии, которые выкладывают пользователи! Видите,&nbspкак&nbspне хватает ваших?</p>
         </div>
         <div class="photos__block photos__block--first">
           <img src="img/panorama-mobile@1x.jpg">
           <div class="photos__description">
             <p><b>Анна </b><span class="photos__time">(5 минут назад)</span></p>
-            <p>Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+            <p class="photos__text">Прыгать или нет? Напишите в комментарии свой совет и смотрите&nbspпрямую трансляцию в перископе, задавайте свои вопросы!</p>
             <span class="photos__like">Нравится: 215</span>
           </div>
         </div>
-        <div class="photos__block">
-          <img src="img/photo-car-mobile@1x.jpg">
-          <div class="photos__description">
-            <p><b>Левон </b><span class="photos__time">(5 часов назад)</span></p>
-            <p>Вчера он на луну летал, сегодня в руки к нам попал.</p>
-            <span class="photos__like">Нравится: 356</span>
+        <div class="photos__block-wrapper">
+          <div class="photos__block">
+            <img src="img/photo-car-mobile@1x.jpg">
+            <div class="photos__description">
+              <p><b>Левон </b><span class="photos__time">(5 часов назад)</span></p>
+              <p>Вчера он на луну летал, сегодня в руки к нам попал.</p>
+              <span class="photos__like">Нравится: 356</span>
+            </div>
+          </div>
+          <div class="photos__block">
+            <img src="img/photo-drumset-mobile@1x.jpg">
+            <div class="photos__description">
+              <p><b>Антон </b><span class="photos__time">(12 часов назад)</span></p>
+              <p>Соседи будут рады!</p>
+              <span class="photos__like">Нравится: 666</span>
+            </div>
+          </div>
+          <div class="photos__block">
+            <img src="img/photo-window-mobile@1x.jpg">
+            <div class="photos__description">
+              <p><b>Борис </b><span class="photos__time">(20 часов назад)</span></p>
+              <p>Здесь могла быть ваша цитата о высоком и вечном.</p>
+              <span class="photos__like">Нравится: 215</span>
+            </div>
+          </div>
+          <div class="photos__block">
+            <img src="img/photo-fair-mobile@1x.jpg">
+            <div class="photos__description">
+              <p><b>Сергей </b><span class="photos__time">(25 часов назад)</span></p>
+              <p>Самая кубанская в мире!</p>
+              <span class="photos__like">Нравится: 4</span>
+            </div>
+          </div>
+          <div class="photos__block">
+            <img src="img/photo-pov-mobile@1x.jpg">
+            <div class="photos__description">
+              <p><b>Максим </b><span class="photos__time">(40 часов назад)</span>
+              <p>Где снег-то?</p>
+              <span class="photos__like">Нравится: 150</span>
+            </div>
+          </div>
+          <div class="photos__block">
+            <img src="img/photo-wing-mobile@1x.jpg">
+            <div class="photos__description">
+              <p><b>Надежда </b><span class="photos__time">(45 часов назад)</span></p>
+              <p>Всем GM и взаимные лайки!</p>
+              <span class="photos__like">Нравится: 2560</span>
+            </div>
           </div>
         </div>
-        <div class="photos__block">
-          <img src="img/photo-drumset-mobile@1x.jpg">
-          <div class="photos__description">
-            <p><b>Антон </b><span class="photos__time">(12 часов назад)</span></p>
-            <p>Соседи будут рады!</p>
-            <span class="photos__like">Нравится: 666</span>
-          </div>
-        </div>
-        <div class="photos__block">
-          <img src="img/photo-window-mobile@1x.jpg">
-          <div class="photos__description">
-            <p><b>Борис </b><span class="photos__time">(20 часов назад)</span></p>
-            <p>Здесь могла быть ваша цитата о высоком и вечном.</p>
-            <span class="photos__like">Нравится: 215</span>
-          </div>
-        </div>
-        <div class="photos__block">
-          <img src="img/photo-fair-mobile@1x.jpg">
-          <div class="photos__description">
-            <b>Сергей </b><span class="photos__time">(25 часов назад)</span>
-            <p>Самая кубанская в мире!</p>
-            <span class="photos__like">Нравится: 4</span>
-          </div>
-        </div>
-        <div class="photos__block">
-          <img src="img/photo-pov-mobile@1x.jpg">
-          <div class="photos__description">
-            <p><b>Максим </b><span class="photos__time">(40 часов назад)</span>
-            <p>Где снег-то?</p>
-            <span class="photos__like">Нравится: 150</span>
-          </div>
-        </div>
-        <div class="photos__block">
-          <img src="img/photo-wing-mobile@1x.jpg">
-          <div class="photos__description">
-            <p><b>Надежда </b><span class="photos__time">(45 часов назад)</span></p>
-            <p>Всем GM и взаимные лайки!</p>
-            <span class="photos__like">Нравится: 2560</span>
-          </div>
-        </div>
-        <div class="photos__intro-block">
-          <p class="photos__intro">Затмите их всех! Выкладывайте все, что накопилось в телефоне!</p>
+        <div class="photos__intro-block photos__intro-block--down">
+          <p class="photos__intro">Затмите их всех!<br>Выкладывайте все, что накопилось в телефоне!</p>
         </div>
       </section>
       <section class="editor">
@@ -120,12 +122,22 @@
             <img src="img/icon-editor-fill.svg">
           </div>
           <div class="editor__range">
-            <div class="editor__scale"></div>
-            <div class="editor__toggle"></div>
+            <div class="editor__range-block">
+              <div class="editor__scale"></div>
+              <div class="editor__toggle"></div>
+            </div>
+            <div class="editor__range-block">
+              <div class="editor__scale"></div>
+              <div class="editor__toggle"></div>
+            </div>
+            <div class="editor__range-block">
+              <div class="editor__scale"></div>
+              <div class="editor__toggle"></div>
+            </div>
           </div>
           <div class="editor__buttons">
-            <button class="editor__button" type="button">Запостить</button>
-            <button class="editor__button" type="button">Отмена</button>
+            <button class="editor__button button" type="button">Запостить</button>
+            <button class="editor__button button" type="button">Отмена</button>
           </div>
         </div>
       </section>
@@ -156,7 +168,9 @@
       </section>
       <section class="page-footer__credits">
         <span>Разработано</span>
-        <img src="img/htmlacademy.svg" width="27" height="34">
+        <a href="https://htmlacademy.ru/intensive/adaptive" class="page-footer__credits-logo">
+          <img src="img/htmlacademy.svg" width="40" height="40">
+        </a>
       </section>
     </footer>
 
