Завершаем вёрстку личного проекта

--- a/source/index.html
+++ b/source/index.html
@@ -48,7 +48,7 @@
           <img src="img/iphone-hand-mobile@1x.png" width="258" height="286">
         </div>
         <section class="download">
-          <a href="" class="download__button button">Скачать&nbspприложение</a>
+          <a href="" class="download__button">Скачать&nbspприложение</a>
           <ul class="download__list">
             <li class="download__platform">
               <a class="download__platform download__platform--apple" href="#" aria-label="Скачать в App Store">
