--- a/source/photo.html
+++ b/source/photo.html
@@ -113,7 +113,7 @@
       </section>
       <section class="editor">
         <div class="editor__image">
-          <img src="img/photo-road-mobile@1x.jpg">
+          <img src="img/photo-road-mobile@1x.jpg" width="300" height="400">
         </div>
         <div class="editor__block">
           <div class="editor__options">
@@ -136,8 +136,8 @@
             </div>
           </div>
           <div class="editor__buttons">
-            <button class="editor__button button" type="button">Запостить</button>
-            <button class="editor__button button" type="button">Отмена</button>
+            <button class="editor__button" type="button">Запостить</button>
+            <button class="editor__button" type="button">Отмена</button>
           </div>
         </div>
       </section>
