--- a/source/form.html
+++ b/source/form.html
@@ -142,12 +142,16 @@
         <div class="form__failure-pop-up">
           <p><b>Что-то пошло не так!</b></p>
           <p>Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-          <button type="button">Ok</button>
+          <div class="form__button-wrapper">
+            <button class="form__button" type="button">Ok</button>
+          </div>
         </div>
         <div class="form__success-pop-up">
           <p><b>Ваша заявка отправлена</b></p>
           <p>Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
-          <button type="button">Закрыть окно</button>
+          <div class="form__button-wrapper">
+            <button class="form__button" type="button">Закрыть окно</button>
+          </div>
         </div>
       </section>
     </main>
