Добавил подчеркивание пунктов меню в виде модификатора

--- a/source/form.html
+++ b/source/form.html
@@ -40,7 +40,7 @@
                     </a>
                   </li>
                   <li class="site-list__item">
-                    <a href="form.html">
+                    <a href="form.html" class="site-list__link--active">
                       Конкурс
                     </a>
                   </li>
