--- a/source/photo.html
+++ b/source/photo.html
@@ -35,7 +35,7 @@
                     </a>
                   </li>
                   <li class="site-list__item">
-                    <a href="photo.html">
+                    <a href="photo.html" class="site-list__link--active">
                       Фотографии
                     </a>
                   </li>
